--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
   <div style="text-align:center">
-    <h1>WELCOME !</h1>
+    <h1 class="mat-headline">GROUP DIVIDER</h1>
+    <p class="mat-caption"><u>성동공업고등학교 교사 김희준</u></p>
     <img
       width="300"
       alt="Angular Logo"
