--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div style="text-align:center">
     <h1 class="mat-headline">GROUP DIVIDER</h1>
-    <p class="mat-caption"><u>성동공업고등학교 교사 김희준</u></p>
+    <p class="mat-caption"><u>잠실고등학교 교사 김희준</u></p>
     <img
       width="300"
       alt="Angular Logo"
@@ -21,6 +21,22 @@
       />
     </mat-form-field>
     <mat-form-field>
+      <mat-chip-list #exclusionNumbers aria-label="exclusion selection">
+        <mat-chip selected color="primary" *ngFor="let number of numbersToExclude"
+                 [selectable]="selectable"
+                 [removable]="removable" 
+                 (removed)="remove(number)">
+          {{number}}
+          <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+        </mat-chip>
+        <input placeholder="제외할 번호" type="number"
+               [matChipInputFor]="exclusionNumbers"
+               [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+               [matChipInputAddOnBlur]="addOnBlur"
+               (matChipInputTokenEnd)="add($event)">
+      </mat-chip-list>
+    </mat-form-field>
+    <mat-form-field>
       <input
         type="number"
         matInput
@@ -28,13 +44,6 @@
         [(ngModel)]="numberOfGroup"
         (ngModelChange)="checkButtonStatus()"
       />
-      <!-- <input
-            type="number"
-            matInput
-            placeholder="한 조에 몇명을 배치하고 싶나요?"
-            [(ngModel)]="numberPerGroup"
-            (ngModelChange)="checkButtonStatus()"
-          /> -->
     </mat-form-field>
     <button
       mat-flat-button
